# RocketWeb-Example

./: Cargo.toml  README.md  database.sqlite
migrations/2024-02-27-185323_create_rustaceans/: up.sql
src/: auth.rs  main.rs  models.rs  repositories.rs
